# GeometryLib

./: CMakeLists.txt  README.md
console/: main.cpp
include/: Circle.hpp  FileHandler.hpp  Line.hpp  LineSegment.hpp  Point.hpp  Shape.hpp  Triangle.hpp
include/geometry/: LineSegment.hpp  Point.hpp  Shape.hpp  circle.hpp  geometry.hpp  line.hpp  segment.hpp  triangle.hpp
src/: FileHandler.cpp  LineSegment.cpp  Point.cpp  circle.cpp  file_utils.cpp  geometry.cpp  line.cpp  segment.cpp  triangle.cpp
tests/: main.cpp
